# ic-panda

./: .eslintrc.js  .gitignore  .lintstagedrc.json  .prettierrc.json  Cargo.toml  LICENSE  Makefile  README.md  README_zh.md  canister_ids.json  dfx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sns_canister_ids.json  sns_functions.md  sns_init.yaml  sns_openchat_canister_ids.json  tsconfig.json
.github/workflows/: release.yml  test.yml
archived-proposals/: proposal-006.sh  proposal-007.sh  proposal-009.sh  proposal-022.sh  proposal-023.sh  proposal-036.sh  proposal-041.sh  proposal-042.sh  proposal-058.sh  proposal-059-0.sh  proposal-061.sh  proposal-064.sh  proposal-089.sh  proposal-091.sh  proposal-102.sh  proposal-103.sh  proposal-104.sh  proposal-105.sh  proposal-108.sh  proposal-116.sh  proposal-128.sh  proposal-130.sh  proposal-149.sh  proposal-153.sh  proposal-155.sh  proposal-160.sh  proposal-163.sh  proposal-173.sh  proposal-177.sh  proposal-191.sh  proposal-193.sh  proposal-196.sh  proposal-199.sh  proposal-202.sh  proposal-204.sh  proposal-208.sh  proposal-217.sh  proposal-218.sh  proposal-219.sh  proposal-221.sh  (+39 more)
archived-proposals/samples/: AddGenericNervousSystemFunction.sh
docs/: dMsg_design_choices.md  dMsg_system_overview.md
proposals/: env.sh  proposal-002.sh  proposal-003.sh  proposal-004.sh  proposal-008.sh  proposal-009.sh  proposal-011.sh  proposal-013.sh  proposal-015.sh  proposal-016.sh  proposal-018.sh  proposal-019.sh  proposal-020.sh  proposal-022.sh  proposal-026.sh  proposal-028.sh  proposal-029.sh  proposal-030.sh  proposal-031.sh  proposal-032.sh  proposal-033.sh  proposal-035.sh  proposal-037.sh  proposal-038.sh  proposal-040.sh  proposal-043.sh  proposal-057.sh  proposal-060.sh  proposal-061.sh  proposal-062.sh  proposal-063.sh  proposal-072.sh  proposal-089.sh  proposal-090.sh  proposal-097.sh  proposal-101.sh  proposal-104.sh  proposal-106.sh  proposal-107.sh  proposal-108.sh  (+184 more)
proposals/archived/: proposal-003.sh  proposal-010.sh  proposal-011.sh  proposal-012.sh  proposal-014.sh  proposal-016.sh  proposal-024.sh  proposal-065.sh  proposal-092.sh  proposal-101.sh  proposal-111.sh  proposal-127.sh  proposal-132.sh  proposal-133.sh  proposal-136.sh  proposal-138.sh  proposal-157.sh  proposal-172.sh  proposal-174.sh  proposal-175.sh  proposal-176.sh  proposal-182.sh  proposal-190.sh  proposal-198.sh  proposal-200.sh  proposal-213.sh  proposal-214.sh  proposal-215.sh  proposal-220.sh
proposals/samples/: AddGenericNervousSystemFunction.sh  Motion.sh  TransferSnsTreasuryFunds.sh  UpgradeSnsToNextVersion.sh
scripts/: deployment_guide.md
src/cli_airdrop/: Cargo.toml  README.md
src/cli_airdrop/src/: agent.rs  block.rs  ledger.rs  main.rs  neuron.rs
src/cli_cryptogram/: Cargo.toml
src/cli_cryptogram/src/: main.rs
src/cli_dmsg/: Cargo.toml
src/cli_dmsg/src/: agent.rs  dmsg.rs  main.rs
src/evm_icp_bridge/: Cargo.toml
src/evm_icp_bridge/contracts/: ICPanda_flattened.sol
src/evm_icp_bridge/src/: api.rs  api_admin.rs  api_http.rs  api_init.rs  ecdsa.rs  evm.rs  helper.rs  lib.rs  store.rs
src/ic_delegation_store/: Cargo.toml  ic_delegation_store.did
src/ic_delegation_store/src/: api_http.rs  api_init.rs  lib.rs  store.rs
src/ic_dmsg_minter/: Cargo.toml  README.md
src/ic_dmsg_minter/src/: api.rs  lib.rs  store.rs
src/ic_message/: Cargo.toml  ic_message.did
src/ic_message/src/: api_admin.rs  api_init.rs  api_query.rs  api_update.rs  lib.rs  schnorr.rs  store.rs  types.rs
src/ic_message_channel/: Cargo.toml  ic_message_channel.did
src/ic_message_channel/src/: api_admin.rs  api_init.rs  api_query.rs  api_update.rs  lib.rs  store.rs  types.rs
src/ic_message_frontend/: .eslintrc.js  .lintstagedrc.json  .prettierrc.json  eslint.config.ts  icpanda-theme.ts  package.json  postcss.config.js  tailwind.config.js  tailwind.config.ts  vite.config.js
src/ic_message_frontend/src/: app.d.ts  app.html  app.pcss  service-worker.ts  setupTests.ts
src/ic_message_frontend/src/lib/: ReloadPrompt.svelte  constants.ts
src/ic_message_frontend/static/: .ic-assets.json
src/ic_message_frontend/static/.well-known/: ic-domains  ii-alternative-origins
src/ic_message_profile/: Cargo.toml  ic_message_profile.did
src/ic_message_profile/src/: api_admin.rs  api_query.rs  api_update.rs  lib.rs  store.rs  types.rs
src/ic_message_types/: Cargo.toml
src/ic_message_types/src/: channel.rs  lib.rs  profile.rs
src/ic_name_identity/: Cargo.toml
src/ic_name_identity/src/: api.rs  api_admin.rs  api_init.rs  lib.rs  store.rs  types.rs
src/ic_panda_ai/: Cargo.toml  README.md  ic_panda_ai.did
src/ic_panda_ai/src/: ai.rs  api_admin.rs  api_http.rs  api_ic_assets.rs  api_init.rs  api_query.rs  api_update.rs  lib.rs  store.rs  types.rs
src/ic_panda_backend/: Cargo.toml
src/ic_panda_badges/: Cargo.toml  ic_panda_badges.did
src/ic_panda_badges/src/: lib.rs
src/ic_panda_frontend/: .eslintignore  .eslintrc.js  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.js  showcase.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js
src/ic_panda_frontend/src/: App.js  app.d.ts  app.html  app.pcss  global.d.ts  service-worker.ts
src/ic_panda_frontend/static/: .ic-assets.json  .ic-assets.json5  site.webmanifest  token.json
src/ic_panda_infra/: Cargo.toml
src/ic_panda_infra/src/: api_admin.rs  api_update.rs  lib.rs  store.rs  types.rs
src/ic_panda_luckypool/: Cargo.toml  ic_panda_luckypool.did
src/ic_panda_luckypool/src/: api_admin.rs  api_init.rs  api_query.rs  api_update.rs  crypto.rs  ecdsa.rs  lib.rs  recaptcha.rs  store.rs  types.rs  utils.rs
src/ic_signin_with/: Cargo.toml  ic_signin_with.did
src/ic_signin_with/src/: api.rs  api_admin.rs  api_eth.rs  api_http.rs  api_init.rs  api_sol.rs  helper.rs  lib.rs  store.rs
src/lib_panda/: Cargo.toml
src/lib_panda/src/: lib.rs
src/x_auth/: Cargo.toml  env.sample
src/x_auth/src/: api.rs  api_twitter.rs  cbor.rs  context.rs  erring.rs  grecaptcha.rs  main.rs
whitepaper/: en.md  zh.md
(+419 files in other folders)
