[workspace]
members = [
  "src/cli_airdrop",
  "src/cli_cryptogram",
  "src/cli_dmsg",
  "src/ic_dmsg_minter",
  "src/ic_message",
  "src/ic_message_channel",
  "src/ic_message_profile",
  "src/ic_message_types",
  "src/ic_name_identity",
  "src/ic_panda_luckypool",
  "src/lib_panda",
  "src/x_auth",
]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
edition = "2021"
version = "2.13.0"
repository = "https://github.com/ldclabs/ic-panda"
keywords = ["canister", "icp", "panda"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
base64 = "0.22"
candid = "0.10"
ciborium = "0.2"
log = "0.4"
serde = "1"
serde_bytes = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }
structured-logger = "1"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = "2"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
num-traits = "0.2"
ic-agent = "0.44"
ic-cdk = "0.18"
ic-cdk-timers = "0.12"
ic-stable-structures = "0.7"
icrc-ledger-types = "0.1"
ic_auth_types = "0.6"
ic_auth_verifier = { version = "0.6" }
ic_cose_types = "0.9"
ic-certification = "3.0"
ic-oss-types = "1.2"
ic-canister-sig-creation = "1.3"
ic-ed25519 = { version = "0.3" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "=4.5", features = ["derive"] }
ic-dummy-getrandom-for-wasm = "0.1"
url = "2.5"

[workspace.metadata.cargo-shear]
ignored = ["ic-dummy-getrandom-for-wasm"]
