[package]
name = "cli_cryptogram"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "panda_cryptogram"
path = "src/main.rs"

[dependencies]
lib_panda = { path = "../lib_panda", version = "0.2" }
candid = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
clap = { version = "=4.5", features = ["derive"] }
