[package]
name = "cli_dmsg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli_dmsg"
path = "src/main.rs"

[dependencies]
candid = { workspace = true, features = ["value", "printer"] }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
ic-agent = { workspace = true }
ciborium = { workspace = true }
num-traits = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
icrc-ledger-types = { git = "https://github.com/dfinity/ic/", rev = "5d202894864f4db4a5a46f44422aebc80c3d321b" }
ic_message_types = { path = "../ic_message_types", version = "2" }
