[package]
name = "cli_dmsg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli_dmsg"
path = "src/main.rs"

[dependencies]
ic_message_types = { path = "../ic_message_types", version = "2" }
candid = { workspace = true, features = ["value", "printer"] }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
ic-agent = { workspace = true }
ciborium = { workspace = true }
num-traits = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
icrc-ledger-types = { workspace = true }
