[package]
name = "evm_icp_bridge"
description = "An Internet Computer canister to bridge ERC-20 & ICRC tokens."
publish = false
repository = "https://github.com/ldclabs/ic-panda/tree/main/src/evm_icp_bridge"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy = { workspace = true }
base64 = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
ic-http-certification = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
ic_auth_types = { workspace = true }
ic_cose_types = { workspace = true }
ic-secp256k1 = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
k256 = { workspace = true, features = ["ecdsa"] }
