[package]
name = "ic_message"
publish = false
repository = "https://github.com/ldclabs/ic-panda/tree/main/src/ic_message"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic_message_types = { path = "../ic_message_types", version = "2" }
candid = { workspace = true }
ciborium = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
getrandom = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
ic_cose_types = { workspace = true }
ic-certification = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic-crypto-ed25519 = { git = "https://github.com/dfinity/ic/", rev = "5d202894864f4db4a5a46f44422aebc80c3d321b" }
