[package]
name = "ic_message_profile"
publish = false
repository = "https://github.com/ldclabs/ic-panda/tree/main/src/ic_message_profile"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic_message_types = { path = "../ic_message_types", version = "2" }
candid = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
ic_cose_types = { workspace = true }
ic-oss-types = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
