[package]
name = "ic_message_types"
description = "A Rust types library used for integrating with ICPanda Messages."
publish = true
repository = "https://github.com/ldclabs/ic-panda/tree/main/src/ic_message_types"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
getrandom = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
ic_cose_types = { workspace = true }
