[package]
name = "ic_panda_ai"
version = "0.1.0"
edition = "2021"
description = "an DeAI app, an LLM chatbot, named Panda Oracle, running in an ICP canister"
publish = false
repository = "https://github.com/ldclabs/ic-panda/tree/main/src/ic_panda_ai"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lib_panda = { path = "../lib_panda", version = "0.2.2" }
bytes = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
base64 = { workspace = true }
sha3 = { workspace = true }
num-traits = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }
candle-core = { git = "https://github.com/ldclabs/candle", features = [] }
candle-nn = { git = "https://github.com/ldclabs/candle", features = [] }
candle-transformers = { git = "https://github.com/ldclabs/candle", features = [
] }
tokenizers = { git = "https://github.com/ldclabs/tokenizers", default-features = false, features = [
  "unstable_wasm",
] }
anyhow = "1"
crc32fast = "1.4"
ic-oss-types = "0.1"
