[package]
name = "ic_panda_luckypool"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lib_panda = { path = "../lib_panda", version = "0.2.2" }
candid = { workspace = true }
ciborium = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
base64 = { workspace = true }
sha3 = { workspace = true }
num-traits = { workspace = true }
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-stable-structures = "0.6"
ic-ledger-types = "0.10"
icrc-ledger-types = "0.1"
once_cell = "1.19"
scopeguard = "1.2"
finl_unicode = "1.2"
url = { version = "2" }
