[package]
name = "ic_panda_luckypool"
publish = false
repository = "https://github.com/ldclabs/ic-panda/tree/main/src/ic_panda_luckypool"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lib_panda = { path = "../lib_panda", version = "0.2.2" }
candid = { workspace = true }
ciborium = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
base64 = { workspace = true }
num-traits = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
once_cell = "1.19"
scopeguard = "1.2"
finl_unicode = "1.2"
url = { version = "2" }
