[package]
name = "ic_signin_with"
description = ""
publish = false
repository = "https://github.com/ldclabs/ic-panda/tree/main/src/ic_signin_with"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lib_panda = { path = "../lib_panda", version = "0.2" }
bs58 = { workspace = true }
base64 = { workspace = true }
candid = { workspace = true, features = ["value", "printer"] }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
ic-stable-structures = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic-certification = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
ic_auth_types = { workspace = true }
ic_auth_verifier = { workspace = true, features = ["envelope"] }
ic-http-certification = { workspace = true }
ic-cdk-timers = { workspace = true }
url = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
time = { workspace = true, features = ["formatting"] }
