[package]
name = "lib_panda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
candid = "0.10"
ciborium = "0.2"
hex = "0.4"
hmac = "0.12"
sha3 = "0.10"
serde = "1"
serde_json = "1"
serde_bytes = "0.11"
base64 = "0.21"
num-traits = "0.2"
