[package]
name = "lib_panda"
publish = false
repository = "https://github.com/ldclabs/ic-panda/tree/main/src/lib_panda"
version = "0.2.2"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
