[package]
name = "x-auth"
publish = false
repository = "https://github.com/ldclabs/ic-panda/tree/main/src/x-auth"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[[bin]]
name = "x-auth"
path = "src/main.rs"

[dependencies]
lib_panda = { path = "../lib_panda", version = "0.2" }
bytes = { workspace = true }
candid = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
structured-logger = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
anyhow = "1"
http = "1"
dotenvy = "0.15"
axum = { version = "0.8", features = [
  "http1",
  "http2",
  "json",
  "macros",
  "matched-path",
  "tokio",
  "query",
], default-features = true }
tower-http = { version = "0.6", features = [
  "catch-panic",
  "compression-gzip",
  "decompression-gzip",
  "propagate-header",
  "cors",
  "timeout",
] }
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "stream",
  "trust-dns",
  "http2",
], default-features = false }
url = { version = "2" }
tower_governor = "0.8"

[dev-dependencies]
rand = "0.9"
